@@ -1,6 +1,7 @@
 TODO
 
-- maybe expand the package to check for global roles as well, but it would
-  be more logical to also rename the package to
-  collective.contentrules.mailtorole ...
+- consider renaming the package to collective.contentrules.mailtorole
+
+- update translations for added global roles functionality (remove the word
+  "local")
   
